# RaPiD-boxes-software

./: .gitignore  CLAUDE.md  INSTALL.md  LICENSE  PLAN.md  Phototropism_program_4.py  README.md  System updates to do on others pi_s.md  System_setup(before_assembly).md  autoremover.sh  bootstrap.sh  launcher3.sh  synchr_auto.sh
GUI/: .intro_page.py.swp  GUI_launcher.py  IR_tester.py  autoremover.sh  controls.py  experiment_status.py  fish.py  imaging_setting.json  intro_page.py  intro_page_backup.py  intro_page_image_settings_GUI.py  intro_page_oop.py  lights_on.py  lights_on_legacy.py  lights_on_newws281x-master.py  loop_test.py  menu.py  meta_data.py  neopixel_test.py  synchr_auto.sh  windows_tester.py
back/: README.md  pyproject.toml
back/rapidboxes/: __init__.py  __main__.py  config.py  config_xml.py  main.py  models.py  settings_store.py  storage.py
back/rapidboxes/api/: __init__.py  deps.py  experiments.py  health.py  images.py  preview.py  settings.py  system.py  ws.py
back/rapidboxes/engine/: __init__.py  runner.py  scheduler.py
back/rapidboxes/hardware/: __init__.py  base.py  camera.py  ir.py  leds.py  manager.py  simulation.py
back/rapidboxes/logging/: __init__.py  context.py  error_log.py  experiment_journal.py  jsonl.py  setup.py  system_log.py  writers.py
back/tests/: test_api.py  test_config.py  test_config_xml.py  test_engine.py  test_logging.py  test_scheduler.py  test_settings_store.py
deploy/: idle.sh  install.sh  kiosk.sh  rapidboxes-idle.desktop  rapidboxes-kiosk.desktop  rapidboxes.service  uninstall.sh  update.sh
(+52 files in other folders)
